objects/Product_Sector_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Circuit_Simulation_Characterization_AX__c</fullName>
        <label>Circuit Simulation&amp;Characterization AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_Characterization_F__c</fullName>
        <description>Circuit Simulation &amp; Characterization Final Percentage</description>
        <label>Circuit Simulation &amp; Characterization %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_Characterization_Sp__c</fullName>
        <label>Circuit Simulation&amp;Characterization DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_Characterization_TC__c</fullName>
        <label>Circuit Simulation &amp; Characterization $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Simulation_Decimal_TCV__c</fullName>
        <description>calculate decimal tcvs</description>
        <formula>( Circuit_Simulation_Characterization_F__c *  Opp_TCV__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Circuit Simulation&amp;Characterization $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Enviornment_Decimal_TCV__c</fullName>
        <description>Hold Decimal TCV values for Custom Enviornment field</description>
        <formula>Custom_Environment_Layout_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Environment &amp; Layout $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Environment_Layout_AX_Override__c</fullName>
        <label>Custom Environment &amp; Layout AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Environment_Layout_Final__c</fullName>
        <label>Custom Environment &amp; Layout %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Custom_Environment_Layout_Split__c</fullName>
        <label>Custom Environment &amp; Layout DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Environment_Layout_TCV__c</fullName>
        <description>Custom Environment &amp; Layout TCV</description>
        <label>Custom Environment &amp; Layout $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_AX_Override__c</fullName>
        <description>Design IP AX Override Percentage</description>
        <label>Design IP AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_Decimal_TCV__c</fullName>
        <description>Hold Decimal Values for Design IP TCV</description>
        <formula>Design_IP_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design IP $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_Final__c</fullName>
        <description>Design IP Final Percentage</description>
        <label>Design IP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_IP_Split__c</fullName>
        <description>Design IP Split Percentage</description>
        <label>Design IP DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_IP_TCV__c</fullName>
        <description>Design IP TCV</description>
        <label>Design IP $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_AX_Override__c</fullName>
        <description>Digital Implementation Override Percentage</description>
        <label>Digital Implementation AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_Decimal_TCV__c</fullName>
        <description>Hold Decimal TCV value for Digital Implementation PS</description>
        <formula>Digital_Implementation_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Digital Implementation $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_Final__c</fullName>
        <description>Digital Implementation Final Percentage</description>
        <label>Digital Implementation %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_Split__c</fullName>
        <description>Digital Implementation Split Percentage</description>
        <label>Digital Implementation DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Implementation_TCV__c</fullName>
        <description>Digital Implementation TCV</description>
        <label>Digital Implementation $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Signoff_AX_Override__c</fullName>
        <description>Electrical Signoff Override Percentage</description>
        <label>Electrical Signoff AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Signoff_Decimal_TCV__c</fullName>
        <description>Hold Decimal TCV value for Electrical Signoff</description>
        <formula>Electrical_Signoff_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Signoff $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Signoff_Final__c</fullName>
        <description>Electrical Signoff Final Percentage</description>
        <label>Electrical Signoff %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Electrical_Signoff_Split__c</fullName>
        <description>Electrical Signoff Split Percentage</description>
        <label>Electrical Signoff DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Electrical_Signoff_TCV__c</fullName>
        <description>Electrical Signoff TCV</description>
        <label>Electrical Signoff $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_AX_Override__c</fullName>
        <description>Emulation &amp; Acceleration AX Override Percentage</description>
        <label>Emulation &amp; Acceleration AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV Value for Emulation Acceleration PS</description>
        <formula>Emulation_Acceleration_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Emulation &amp; Acceleration $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_Final__c</fullName>
        <description>Emulation &amp; Acceleration Final Percentage</description>
        <label>Emulation &amp; Acceleration %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_Split__c</fullName>
        <description>Emulation &amp; Acceleration Split Percentage</description>
        <label>Emulation &amp; Acceleration DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Emulation_Acceleration_TCV__c</fullName>
        <description>Emulation &amp; Acceleration TCV</description>
        <label>Emulation &amp; Acceleration $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_AX_Override__c</fullName>
        <description>Formal Verification Override</description>
        <label>Formal Verification AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_Decimal_TCV__c</fullName>
        <description>Hold Decimal TCV for Formal Verification PS</description>
        <formula>Formal_Verification_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formal Verification $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_Final__c</fullName>
        <description>Formal Verification Final Percentage</description>
        <label>Formal Verification %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_Split__c</fullName>
        <description>Formal Verification Split Percentage</description>
        <label>Formal Verification DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Formal_Verification_TCV__c</fullName>
        <description>Formal Verification TCV</description>
        <label>Formal Verification $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_AX_Override__c</fullName>
        <description>Functional Verification Override percentage</description>
        <label>Functional Verification AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV Value for Funcational Verification PS</description>
        <formula>Functional_Verification_Final__c * Opp_TCV__c</formula>
        <label>Functional Verification $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_Final__c</fullName>
        <description>Functional Verification Final Percentage</description>
        <label>Functional Verification %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_Split__c</fullName>
        <description>Functional Verification Split Percentage</description>
        <label>Functional Verification DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Functional_Verification_TCV__c</fullName>
        <description>Functional Verification TCV</description>
        <label>Functional Verification $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_PackageSiP_codesign_TCV__c</fullName>
        <description>IC Package/SiP co-design TCV</description>
        <label>IC Package SiP co-design $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_SiP_Decimal_TCV__c</fullName>
        <description>Hold Decimal TCV value fro IC Package SiP codesign Final</description>
        <formula>IC_Package_SiP_codesign_Final__c * Opp_TCV__c</formula>
        <label>IC Package SiP co-design $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_SiP_codesign_AX_Override__c</fullName>
        <description>IC Package/SiP co-design Override</description>
        <label>IC Package SiP co-design AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IC_Package_SiP_codesign_Final__c</fullName>
        <description>IC Package/SiP co-design Final Percentage</description>
        <label>IC Package SiP co-design %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IC_Package_SiP_codesign_Split__c</fullName>
        <label>IC Package SiP co-design DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_TCV__c</fullName>
        <description>Get Opportunity TCV value to calculate Product Sector fields</description>
        <formula>Opportunity__r.TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opp TCV</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_Transaction_Type__c</fullName>
        <description>Opportunity Transaction Type for calculating formula fields</description>
        <formula>Opportunity__r.Transaction_Type_ref__c</formula>
        <label>Opp Transaction Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_External_id__c</fullName>
        <externalId>true</externalId>
        <label>Opportunity External id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Opportunity_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Transaction_Type__c</fullName>
        <label>Opportunity Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Product_Sector_Table_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PCB_Design_AX_Override__c</fullName>
        <description>PCB Design Override Percentage</description>
        <label>PCB Design AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCB_Design_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV from PCB Design PS</description>
        <formula>PCB_Design_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PCB Design $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCB_Design_Final__c</fullName>
        <description>PCB Design Final Percentage</description>
        <label>PCB Design %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PCB_Design_Split__c</fullName>
        <description>PCB Design Split Percentage</description>
        <label>PCB Design DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCB_Design_TCV__c</fullName>
        <description>PCB Design TCV</description>
        <label>PCB Design $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Signoff_AX_Override__c</fullName>
        <description>Physical Signoff Override percentage</description>
        <label>Physical Signoff AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Signoff_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV for Physical Signoff PS</description>
        <formula>Physical_Signoff_Final__c * Opp_TCV__c</formula>
        <label>Physical Signoff $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Signoff_Final__c</fullName>
        <description>Physical Signoff Percentage</description>
        <label>Physical Signoff %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Physical_Signoff_Split__c</fullName>
        <description>Physical Signoff Split Percentage</description>
        <label>Physical Signoff DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Signoff_TCV__c</fullName>
        <description>Physical Signoff TCV</description>
        <label>Physical Signoff $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_AX_Override__c</fullName>
        <description>Services AX Override Percentage</description>
        <label>Services AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV Value for Services PS</description>
        <formula>Services_Final__c * Opp_TCV__c</formula>
        <label>Services $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Final__c</fullName>
        <description>Services Final Percentage</description>
        <label>Services %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Services_Split__c</fullName>
        <description>Services Split Percentage</description>
        <label>Services DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_TCV__c</fullName>
        <description>Services TCV</description>
        <label>Services $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_Test_AX_Override__c</fullName>
        <description>Synthesis &amp; Test Override Percentage</description>
        <label>Synthesis &amp; Test AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_Test_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV value for Synthesis Test PS</description>
        <formula>Synthesis_Test_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Synthesis &amp; Test $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_Test_Final__c</fullName>
        <description>Synthesis &amp; Test Final</description>
        <label>Synthesis &amp; Test %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Synthesis_Test_Split__c</fullName>
        <description>Synthesis &amp; Test Split Percentage</description>
        <label>Synthesis &amp; Test DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Synthesis_Test_TCV__c</fullName>
        <description>Synthesis &amp; Test TCV</description>
        <label>Synthesis &amp; Test $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemLevel_Design_AX_Override__c</fullName>
        <description>System-Level Design Override Percentage</description>
        <label>System-Level Design AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemLevel_Design_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV Value for System Level Design</description>
        <formula>SystemLevel_Design_Final__c * Opp_TCV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System-Level Design $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemLevel_Design_Final__c</fullName>
        <description>System-Level Design Final Percentage</description>
        <label>System-Level Design %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SystemLevel_Design_Split__c</fullName>
        <description>System-Level Design Split Percentage</description>
        <label>System-Level Design DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemLevel_Design_TCV__c</fullName>
        <description>System-Level Design TCV</description>
        <label>System-Level Design $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TCV_Calculation_Value__c</fullName>
        <description>It will hold the value of TCV while we are displaying it on VF page</description>
        <label>Total $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_AX_Override__c</fullName>
        <description>Total AX Override percentage</description>
        <label>Total AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Final__c</fullName>
        <description>Total Final Percentage</description>
        <label>Total %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Split__c</fullName>
        <description>Total Split Percentage</description>
        <label>Total DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_TCV_Value__c</fullName>
        <description>Total TCV Value</description>
        <label>Total $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_AX_Override__c</fullName>
        <description>VIP Override percentage</description>
        <label>VIP AX%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Decimal_TCV__c</fullName>
        <description>Holds Decimal TCV Value for VIP PS</description>
        <formula>VIP_Final__c * Opp_TCV__c</formula>
        <label>VIP $dec</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_Final__c</fullName>
        <description>VIP Final Percentage</description>
        <label>VIP %</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VIP_Split__c</fullName>
        <description>VIP Split Percentage</description>
        <label>VIP DMS%</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VIP_TCV__c</fullName>
        <description>VIP TCV</description>
        <label>VIP $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDMSOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDMSOverride</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFirstLoad__c</fullName>
        <defaultValue>true</defaultValue>
        <description>check whether the page is load for the first time.</description>
        <label>isFirstLoad</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Sector Configuration</label>
    <nameField>
        <displayFormat>PSCN-{0000}</displayFormat>
        <label>PS Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sector Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>